// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table users {
  id bigint [pk, increment]
  telegram_id bigint [unique, not null]
  username text
  created_at timestamp [default: `now()`]
}

Table portfolios {
  id bigint [pk, increment]
  user_id bigint [not null]//, ref: > users.id]
  name text [not null]
  description text
  is_default boolean [not null, default: false]
  created_at timestamp [default: `now()`]
}

Table transactions {
  id bigint [pk, increment]
  portfolio_id bigint [not null]//, ref: > portfolios.id]
  type text [not null] // buy, sell, transfer
  asset text [not null] // Asset ticker like "BTC", "ETH"
  asset_amount numeric(18,8) [not null]
  asset_price numeric(18,8)
  amount_usd numeric(12,2) [not null]
  transaction_date timestamp [not null]
  note text
  created_at timestamp [default: `now()`]
}

Ref: portfolios.user_id > users.id
Ref: transactions.portfolio_id > portfolios.id

// id SERIAL        -- int (4 bytes) 2,147,483,647
// id BIGSERIAL     -- bigint (8 bytes) ✅ 9,223,372,036,854,775
// id SMALLSERIAL   -- smallint (2 bytes) 32,767
